--- a/roles/backup/templates/.my.cnf.j2
+++ b/roles/backup/templates/.my.cnf.j2
@@ -1,5 +1,5 @@
 [client]
-port=6033
-socket=/tmp/proxysql.sock
+port=3306
+socket=/var/run/mysqld/mysqld.sock
 user = "{{ mysql_user }}"
 password = "{{ mysql_password }}"
