--- a/roles/telegraf_monserver/templates/telegraf.conf.monservers.j2
+++ b/roles/telegraf_monserver/templates/telegraf.conf.monservers.j2
@@ -202,7 +202,7 @@
 #  address = "http://localhost"
 #
 #   ## List of urls to query.
-  urls = ["https://devopsit.ru", "https://monitoring.devopsit.ru"]
+  urls = ["https://devopsit.ru", "https://monitoring.devopsit.ru:3000"]
 #
 #   ## Set http_proxy (telegraf uses the system wide proxy settings if it's is not set)
 #   # http_proxy = "http://localhost:8888"
